// limitations under the License.
// Contributors:
// John D. Ament
// Emily Jiang

[[release_notes_20]]
== Release Notes for MicroProfile Config 2.0

A full list of changes delivered in the 2.0 release can be found at link:https://github.com/eclipse/microprofile-config/milestone/8?closed=1[MicroProfile Config 2.0 Milestone].

=== Incompatible Changes

- ConfigSource#getPropertyNames is no longer a default method. The implementation of a ConfigSource must implement this method. (link:https://github.com/eclipse/microprofile-config/issues/431[431]
- Previous versions of the specification would not evaluate Property Expressions. As such, previous working
configuration may behave differently (if the used configuration contains values with Property Expressions
syntax). Check the link:property-expressions.asciidoc[Property Expressions] section on how to go back to the
previous behaviour.

=== API/SPI Changes
- Convenience methods have been added to Config allowing for the retrieval of multi-valued properties as lists instead of arrays (link:https://github.com/eclipse/microprofile-config/issues/496[#496])
- Enable bulk-extraction of config properties into a separate POJO by introducing `@ConfigProperties` (link:https://github.com/eclipse/microprofile-config/issues/240[240])
- Enable users to determine the winning source for a configuration value (link:https://github.com/eclipse/microprofile-config/issues/312[312]) (link:https://github.com/eclipse/microprofile-config/issues/43[43])
- Expose conversion mechanism in Config API (link:https://github.com/eclipse/microprofile-config/issues/492[492])
- Add unwrap() methods to Config (link:https://github.com/eclipse/microprofile-config/issues/84[84])

=== Functional Changes
- Support Configuration Profiles so that the corresponding properties associated with the active profile are used (link:https://github.com/eclipse/microprofile-config/issues/418[#418])