@@ -16,4 +16,4 @@ test-output
 .vscode/
 # Ignore a release.conf for perform_release/* script usage
 release.conf
-*/.DS_Store
+**/.DS_Store
